k8s/intent/ingress-v4-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intent-router-v4-demo
  namespace: intent
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: intent-router.kkrrc-359.top
      http:
        paths:
          - path: /v4-demo(/|$)(api/assistant/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: intent-assistant-demo
                port:
                  number: 8040
          - path: /v4-demo(/|$)(api/router/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: intent-router-api
                port:
                  number: 8000
          - path: /v4-demo(/|$)(api/transfer-agent/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: intent-transfer-agent-demo
                port:
                  number: 8031
          - path: /v4-demo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: intent-router-v4-observer-ui
                port:
                  number: 3010
